@@ -5,13 +5,18 @@
     <artifactId>sdc-server-core</artifactId>
     <packaging>jar</packaging>
     <name>sdc-server-core</name>
-    <version>1.2.0</version>
+    <version>1.3.0</version>
 
     <properties>
         <spring.version>3.0.5.RELEASE</spring.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.telefonica.euro_iaas</groupId>
+            <artifactId>sdc-server-model</artifactId>
+            <version>1.3.0</version>
+        </dependency>
         <!-- Webedav java client Sardine -->
         <dependency>
             <groupId>com.googlecode.sardine</groupId>
@@ -242,6 +247,115 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>2.2</version>
+            </plugin>
+
+                        <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.0-beta-3</version>
+                <configuration>
+                    <reportPlugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-project-info-reports-plugin</artifactId>
+                            <version>2.2</version>
+                            <reports>
+                                <report>index</report>
+                                <report>project-team</report>
+                                <report>license</report>
+                                <report>mailing-list</report>
+                                <report>dependencies</report>
+                                <report>dependency-convergence</report>
+                                <report>plugin-management</report>
+                                <report>cim</report>
+                                <report>issue-tracking</report>
+                                <report>scm</report>
+                                <report>summary</report>
+                            </reports>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-report-plugin</artifactId>
+                            <version>2.6</version>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <version>2.7</version>
+                            <configuration>
+                                <doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet>
+                                <docletArtifact>
+                                    <groupId>gr.spinellis</groupId>
+                                    <artifactId>UmlGraph</artifactId>
+                                    <version>4.4</version>
+                                </docletArtifact>
+                                <additionalparam>
+                     <![CDATA[
+ -charset UTF-8
+ -docencoding UTF-8
+ -version
+ -author
+ -breakiterator
+ -windowtitle "${project.name} ${project.version} API Reference"
+ -doctitle "<img src='doc-files/logo.png'><br><b><font size='+2'>SDC Server</b></font><br>"
+ -bottom "Copyright &#169; ${project.inceptionYear}-Present ${project.organization.name} All Rights Reserved."
+ -use
+ -tag async:a:Asynchronous
+ -inferrel -inferdep -quiet -hide java.* -collpackages java.util.* -qualify
+ -postfixpackage -nodefontsize 9
+ -nodefontpackagesize 7
+                     ]]>
+                                </additionalparam>
+                            </configuration>
+                        </plugin>
+
+
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-checkstyle-plugin</artifactId>
+                            <version>2.6</version>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>findbugs-maven-plugin</artifactId>
+                            <version>2.3.1</version>
+                            <configuration>
+                                <argLine>-Xmx256m</argLine>
+                                <argLine>-XX:MaxPermSize=256m</argLine>
+                            </configuration>
+                            <!-- Usually findbugs needs a lot of memory,
+                                change these values if needed. -->
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>jdepend-maven-plugin</artifactId>
+                            <version>2.0-beta-2</version>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>cobertura-maven-plugin</artifactId>
+                            <version>2.4</version>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-jxr-plugin</artifactId>
+                            <version>2.1</version>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-pmd-plugin</artifactId>
+                            <version>2.5</version>
+                            <configuration>
+                                <linkXref>true</linkXref>
+                                <minimumTokens>100</minimumTokens>
+                                <minimumPriority>3</minimumPriority>
+                                <!-- Change minimum priority to see more
+                                    or less messages -->
+                                <targetJdk>1.6</targetJdk>
+                            </configuration>
+                        </plugin>
+                    </reportPlugins>
+                </configuration>
             </plugin>
         </plugins>
     </build>
